--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -6,5 +6,13 @@
   width: 100vw;
 }
 
-@import "./styles/components/shared/index";
+div[class*="MuiCardActions"] {
+  justify-self: flex-end;
+  flex: 1;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+
+@import "./styles/components/index";
 @import "./styles/containers/index";
