Implemented a way to filter the events.

--- a/frontend/src/styles/components/Event.scss
+++ b/frontend/src/styles/components/Event.scss
@@ -1,6 +1,6 @@
 .ex-event {
   div[class*=MuiCardContent] {
-    background-color: #1d1d1d;
-    color: #e3a21a;
+    background-color: #2b5797;
+    color: white;
   }
 }
